# openclaw-remote

./: .gitignore  README.md  STANDALONE-REPO.md
.knowledge/: PLAN-chrome-vscode-extensions.md  TECH-DESIGN-chrome-vscode-extensions.md  mqtt-ui-bridge-testing.md  prd.md
apps/chrome/: README.md  manifest.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/flutter/: README.md
apps/vscode/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
apps/vscode/src/: extension.ts  storage.ts
openclaw-mqtt-bridge/: index.ts  openclaw.plugin.json  package.json
openclaw-mqtt-bridge/src/: bridge.ts  config.ts  crypto.ts  types.ts  ws-client.ts
sdk/rust/: Cargo.toml  DESIGN.v1.md  DESIGN.v2.md  DETAILED-DESIGN.md  README.md  REVIEW.v1.md  REVIEW.v2.md
sdk/rust/src/: error.rs  lib.rs  sdk.rs
sdk/rust/src/cli/: executor.rs  mod.rs  traits.rs
sdk/rust/src/cli/commands/: doctor.rs
sdk/rust/src/types/: agent.rs  channel.rs  chat.rs  common.rs  config.rs  event.rs  gateway.rs  message.rs  mod.rs
sdk/rust/src/ws/: actor.rs  auth.rs  client.rs  events.rs  handshake.rs  mod.rs  protocol.rs  reconnect.rs  traits.rs
sdk/rust/src/ws/methods/: agent.rs  channels.rs  chat.rs  config.rs  message.rs  mod.rs  status.rs
sdk/rust/tests/: integration_test.rs  methods_test.rs
ui-mqtt/: package-lock.json  package.json  vite.config.ts
ui-mqtt/src/: css.d.ts  gateway-events.ts  session-key-utils.ts  styles.css
ui-mqtt/src-tauri/: Cargo.toml  tauri.conf.json
ui-mqtt/src-tauri/icons/: icon.icns  mkicons.py
ui-mqtt/src/agents/: tool-policy-shared.ts
ui-mqtt/src/gateway/: client-info.ts  connect-error-details.ts  device-auth.ts
ui-mqtt/src/infra/: format-duration.ts  format-relative.ts
ui-mqtt/src/shared/: assistant-identity-values.ts  device-auth-store.ts  device-auth.ts  usage-types.ts
ui-mqtt/src/styles/: mqtt.css
(+46 files in other folders)
