[package]
name = "openclaw-remote"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Pin for rustc 1.86 compatibility (time 0.3.47+ requires 1.88)
time = "0.3.36"

[build-dependencies]
tauri-build = { version = "2", features = [] }
